infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: www.zhahranyappsdev.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/api/payments/?(.*)"
        backend:
          service:
            name: payments-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/users/?(.*)"
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/tickets/?(.*)"
        backend:
          service:
            name: tickets-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/orders/?(.*)"
        backend:
          service:
            name: orders-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.zhahranyappsdev.xyz'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller    
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
